# nb-claw

./: .gitignore  CHANGELOGS.md  CONFIG_GUIDE.md  Cargo.toml  README.md  package.ps1
.codebuddy/rules/: PROJECT_REQUIRES.mdc
.github/workflows/: release.yml  rust.yml
scripts/: package.ps1  package.sh
src/: config.rs  llm.rs  main.rs  memory.rs  python.rs  scheduler.rs  uiauto.rs  vcs.rs
src/llm/: client.rs  tools.rs
src/memory/: engine.rs  py_module.rs
src/python/: interpreter.rs  mod.rs
src/scheduler/: engine.rs  py_module.rs
src/uiauto/: linux.rs  manager.rs  windows.rs
src/vcs/: engine.rs  path_extractor.rs  py_module.rs
